Creación de ls APIs para el Owner
